--- a/app/src/main/res/layout/pokemons_details_fragment.xml
+++ b/app/src/main/res/layout/pokemons_details_fragment.xml
@@ -667,7 +667,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_baseline_add_circle_outline_24"
+        android:src="@drawable/ic_favorite"
         android:visibility="gone"
         app:backgroundTint="@color/primary"
         app:fabSize="mini"
