--- a/app/src/main/res/layout/pokemons_fragment.xml
+++ b/app/src/main/res/layout/pokemons_fragment.xml
@@ -19,9 +19,39 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.PokePlexus.PopupOverlay" />
+            android:background="@color/primary_contrast"
+            app:popupTheme="@style/Theme.PokePlexus.PopupOverlay"
+            app:contentInsetStart="0dp">
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/pokemon_solid"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:letterSpacing="0.1"
+                    android:textSize="20sp"
+                    android:text="@string/app_name"/>
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/btn_filter_favorite"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:scaleType="centerCrop"
+                    android:padding="12dp"
+                    app:tint="@color/primary"
+                    android:src="@drawable/ic_favorite_filled"/>
+            </FrameLayout>
+
+
+
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
 
