--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,7 +23,7 @@
 
         <argument
             android:name="pokemon"
-            app:argType="com.orpheu.pokeplexus.domain.model.Pokemon" />
+            app:argType="com.orpheu.pokeplexus.data.model.Pokemon" />
 
     </fragment>
 </navigation>
